Class for hiding desktop elements on mobile is global class no longer scoped specifically to tips item

--- a/the-great-white-app/src/pages/primary/SharkMap.css
+++ b/the-great-white-app/src/pages/primary/SharkMap.css
@@ -9,7 +9,3 @@
   display: flex;
   flex-flow: column nowrap;
 }
-
-.tip-item--desktop {
-    display: none;
-}
